# LLM-detective

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/llm_detective/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  examiner.py  models.py
src/llm_detective/detectors/: __init__.py  base.py  gpt35.py  gpt4.py  llama.py  registry.py
src/llm_detective/fingerprints/: __init__.py  riddles.py
src/llm_detective/strategies/: __init__.py  base.py  confidence.py
tests/: test_analyzer.py  test_examiner.py  test_models.py  test_riddles.py
