[tool.poetry]
name = "llm-detective"
version = "0.1.0"
description = "Unmask fake LLM APIs"
authors = ["Chance Dean <novelnexusai@outlook.com>"]
readme = "README.md"
packages = [{include = "llm_detective", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.0.0"
typer = "^0.12.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.scripts]
sherlock = "llm_detective.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
